Fixed proyect configuration, added skeleton and tests